--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -769,6 +769,14 @@ header .row {
     margin-right: 5px;
 }
 
+/* Hide the images by default */
+.mySlides {
+    display: none;
+}
+.active-slide {
+  display:block;
+}
+
 /* The dots/bullets/indicators */
 .dot-container {
     position: absolute;
@@ -788,8 +796,37 @@ header .row {
     transition: background-color 0.6s ease;
 }
 
-.active {
+.active,
+.dot:hover {
     background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
 }
 
 /* ----------------------------------------------- */
